--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ for (let e of a) {
         <section>
             <section>
                 <h2>Default parameter values</h2>
-                <pre class="fragment"><code data-trim class="language-javascript">
+                <pre><code data-trim class="language-javascript">
 function f(par1, par2, par3) {
     if (typeof par1 === "undefined") {
         par1 = 6;
@@ -548,6 +548,9 @@ programmer.introduce(); // prints "I'm John", "I'm a programmer"
                 <h2>Let's mix it up!</h2>
                 <pre><code data-trim class="language-javascript">
 function Superhero(name) {
+    if (typef name === "undefined") {
+        name = "Superhero";
+    }
     this.name = name;
     this.powers = [].slice.call(arguments, 1);
     this.powers.unshift("speed");
@@ -570,7 +573,7 @@ Superhero.prototype.schedulePowers = function () {
                 <h2>Let's mix it up!</h2>
                 <pre><code data-trim class="language-javascript">
 class Superhero {
-    constructor(name, ...powers) {
+    constructor(name = "Superhero", ...powers) {
         this.name = name;
         this.powers = ["speed", ...powers];
     }
