Fix formatting in the final example, correct example on jsbin

--- a/index.html
+++ b/index.html
@@ -548,9 +548,7 @@ programmer.introduce(); // prints "I'm John", "I'm a programmer"
                 <h2>Let's mix it up!</h2>
                 <pre><code data-trim class="language-javascript">
 function Superhero(name) {
-    if (typef name === "undefined") {
-        name = "Superhero";
-    }
+    if (typef name === "undefined") { name = "Superhero"; }
     this.name = name;
     this.powers = [].slice.call(arguments, 1);
     this.powers.unshift("speed");
@@ -595,7 +593,7 @@ class Superhero {
 
         <section>
             <h1>Traceur: jsbin.com</h1>
-            <iframe src="http://jsbin.com/OzUGOwu/1/embed?js,console" width="1024" height="450"></iframe>
+            <iframe src="http://jsbin.com/OzOMOwI/1/embed?js,console" width="1024" height="450"></iframe>
         </section>
 
 
