Change index title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Michał Gołębiowski: slides from various talks</title>
+    <title>Michał Gołębiowski: slides from my talks</title>
 
     <meta name="author" content="Michał Gołębiowski">
 
