--- a/ng-1-meets-ng-2/index.html
+++ b/ng-1-meets-ng-2/index.html
@@ -229,7 +229,7 @@ class UnicornHype {
         <section>
             <h2>What's the difference?</h2>
             <p>Not much.</p>
-            <img src="/diffs/ng-unicorn-diff.png">
+            <img src="diffs/ng-unicorn-diff.png">
         </section>
 
         <!-- DIRECTIVES -->
