--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 Slides from my various talks (to be extended over time):
 <ul>
     <li><a href="ecmascript-harmony">Future of JavaScript: ECMAScript Harmony</a></li>
+    <li><a href="ng-1-meets-ng-2">Angular 1 meets Angular 2 (ng-conf 2015, Salt Lake City)</a></li>
 </ul>
 </body>
 </html>
