Typo: `return Promise` -> `return new Promise`

--- a/ng-1-meets-ng-2/index.html
+++ b/ng-1-meets-ng-2/index.html
@@ -206,7 +206,7 @@ class UnicornHype {
         this.horn = unicornHorn;
     }
     findUnicorn() {
-        return Promise((resolve, reject) => {
+        return new Promise((resolve, reject) => {
             navigator.geolocation.getCurrentPosition((pos) => {
                 this.horn.thrust();
                 resolve(`The unicorn is at ${pos.coords.latitude}`);
