Add slides for the flexbox presentation at WDI 2016

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 <body>
 Slides from my various talks (to be extended over time):
 <ul>
-    <li><a href="ecmascript-harmony">Future of JavaScript: ECMAScript Harmony</a></li>
-    <li><a href="ng-1-meets-ng-2">Angular 1 meets Angular 2 (ng-conf 2015, Salt Lake City)</a></li>
+    <li><a href="./ecmascript-harmony">Future of JavaScript: ECMAScript Harmony</a></li>
+    <li><a href="./ng-1-meets-ng-2">Angular 1 meets Angular 2 (ng-conf 2015, Salt Lake City, Utah, USA)</a></li>
+    <li><a href="./flexbox">CSS Flexbox, czyli jak uprościć stylowanie stron internetowych (Warszawskie Dni Informatyki 2016, Warsaw, Poland)</a></li>
 </ul>
 </body>
 </html>
